<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_chart"
        android:icon="@drawable/ic_show_chart"
        android:title="@string/chart"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_export"
        android:icon="@drawable/ic_file_download"
        android:title="@string/menu_export"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/menu_settings"
        app:showAsAction="ifRoom" />
<!--    <item-->
<!--        android:id="@+id/action_about"-->
<!--        android:icon="@drawable/ic_info"-->
<!--        android:title="@string/menu_about"-->
<!--        app:showAsAction="never" />-->
</menu>